--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,31 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% seo %}
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     
-    <!-- Add Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+    <!-- Modern fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
     
     {% include head-custom.html %}
   </head>
   <body>
     <header id="header">
-      <nav>
-        <ul>
-          <li><a href="{{ site.baseurl }}/">Home</a></li>
-          <li><a href="{{ site.baseurl }}/course-materials">Course Materials</a></li>
-          <li><a href="{{ site.baseurl }}/resources">Resources</a></li>
-          <li><a href="{{ site.baseurl }}/outlines">Outlines</a></li>
-          <li><a href="{{ site.baseurl }}/certification">Certification</a></li>
-          <li><a href="{{ site.baseurl }}/about">About</a></li>
-        </ul>
-      </nav>
+      <div class="wrapper">
+        <nav>
+          <ul>
+            <li><a href="{{ site.baseurl }}/">Home</a></li>
+            <li><a href="{{ site.baseurl }}/course-materials">Course Materials</a></li>
+            <li><a href="{{ site.baseurl }}/resources">Resources</a></li>
+            <li><a href="{{ site.baseurl }}/outlines">Outlines</a></li>
+            <li><a href="{{ site.baseurl }}/certification">Certification</a></li>
+            <li><a href="{{ site.baseurl }}/about">About</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <div class="wrapper">
