--- a/layouts/default.html
+++ b/layouts/default.html
@@ -20,7 +20,7 @@
         <nav>
           <ul>
             <li><a href="{{ site.baseurl }}/">Home</a></li>
-            <li><a href="{{ site.baseurl }}/course-materials">Course Materials</a></li>
+            <li><a href="{{ site.baseurl }}/course-materials">Materials</a></li>
             <li><a href="{{ site.baseurl }}/resources">Resources</a></li>
             <li><a href="{{ site.baseurl }}/outlines">Outlines</a></li>
             <li><a href="{{ site.baseurl }}/certification">Certification</a></li>
